k8s/base/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: markenx-api
  namespace: markenx
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: markenx-api
  template:
    metadata:
      labels:
        app: markenx-api
    spec:
      containers:
        - name: api
          image: markenx/markenx-api:v4.3.0-alpha
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: keycloak-secret
              mountPath: /etc/secrets/keycloak
              readOnly: true
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "768Mi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /api/v1/actuator/health/liveness
              port: 8080
            failureThreshold: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/v1/actuator/health/readiness
              port: 8080
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/actuator/health/liveness
              port: 8080
            periodSeconds: 20
      volumes:
        - name: keycloak-secret
          secret:
            secretName: keycloak-client-secret
            items:
              - key: client-secret
                path: client-secret
