k8s/base/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: markenx-api
  namespace: markenx
  labels:
    app: markenx-api
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: markenx-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
